@@ -49,6 +49,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Special:Listfiles now supports a username parameter
 * Special:Random carries over query string parameters
 * (bug 23206) Add Special::Search hook for detecting successful "Go"
+* When visiting a "red link" of a deleted file, a deletion and move log excerpt
+  is provided on the Upload form.
 
 === Bug fixes in 1.17 ===
 * (bug 17560) Half-broken deletion moved image files to deletion archive
